[metadata]
name = pyIGRF
version = attr:pyIGRF.__version__
description = International Geomagnetif Reference Field 13
long_description = file: README.md
keywords = igrf
author = Ciaran Beggan
author_email = 
url = https://github.com/ciaranbe/pyIGRF
license = MIT License
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    numpy>=1.15
    scipy>=1.1

[options.extras_require]
tests =
    pytest

[tool:pytest]
addopts = -v tests
